data/derived/fa15/progs/unify/prog2109.ml.out
Characters 73-77:
  wwhile (funt, b);;
          ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
